--- a/H1/README
+++ b/H1/README
@@ -3,5 +3,11 @@ H1 is the heuristic which gives-
 a. Cost=-10 if the point for which cost is to be calculated lies on the line joining start-point and end-point.
 b. Distance of point for which cost is to be calculated from the line joining start-point and end-point (Ignoring the square-root term in denominator.)
 H1 can be proved as non-admissible.
-The behavior of H1 is peculiar. It works with the best results in a maze with no obstacle on the line joining start to end. 
+The behavior of H1 is peculiar. 
+It works with the best results in a maze with no obstacle on the line joining start to end. 
 However, in other cases it may not provide optimum solution.
+
+With the help of a suitable image it can be shown that H1 is non-admissible. 
+Using the create_sample.py python file a sample image was created and two heuristics- H1 and Djikstra were implemented on it. 
+The H1 Heuristic did not yield the shortest path which the Djikstra algorithm provided.
+Hence proved that H1 is non-admissible Heuristic.
